@@ -1,3 +1,8 @@
+2006-05-05  Tim Waugh  <twaugh@redhat.com>
+
+	* cupsconnection.c (Connection_getClasses): Handle IPP_NOT_FOUND,
+	which is returned when there are no classes.
+
 2006-05-04  Tim Waugh  <twaugh@redhat.com>
 
 	* Makefile: Version 1.9.9.
